# ads-cft-drafts

./: EinsteinEquations.nb  HeaderGeneration.nb  Tests.wl  Utilities.wl  notes.md.html  solver.ss
chapel/: HalideRuntime.chpl  IDR.chpl  setup-env.sh  test_HalideRuntime.chpl  test_IDR.chpl
einstein-equations/: cabal.project  einstein-equations.cabal
einstein-equations/app/: Main.hs
einstein-equations/src/: EinsteinEquations.hs
einstein-equations/src/EinsteinEquations/: Collocation.hs  Halide.hs  NewtonRaphson.hs  Tensor.hs
einstein-equations/test/: Spec.hs
kernels/: .clang-format  CMakeLists.txt  einstein_equations_generator.cpp  generated_expressions.hpp  test_generator.cpp
metric/: CHANGELOG.md  README.md  cabal.project  default.nix  flake.nix  metric.cabal  nixkell.toml  shell.nix
metric/.github/workflows/: nix.yml
metric/app/: Main.hs
metric/kernels/: CMakeLists.txt  einstein_equations.cpp  generated_expressions.hpp
metric/nix/: overlays.nix  packages.nix  release.nix  scripts.nix  sources.json
metric/nix/others/: ads-cft-kernels.nix  arrayfire.nix  halide.nix
metric/src/: Metric.hs
metric/src/Metric/: IDR.hs  Jacobian.hs  LineSearch.hs  NewtonRaphson.hs  Petsc.hs
metric/src/Metric/Petsc/: Context.hs  Types.hsc
metric/test/: MetricSpec.hs
metric/test/Metric/: IDRSpec.hs  LineSearchSpec.hs  NewtonRaphsonSpec.hs
