cabal-version:       3.0
name:                metric
version:             0.0.1.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/twesterhout/metric
bug-reports:         https://github.com/twesterhout/metric/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tom Westerhout
maintainer:          Tom Westerhout <14264576+twesterhout@users.noreply.github.com>
copyright:           2022 Tom Westerhout
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.0.2

source-repository head
  type:                git
  location:            https://github.com/twesterhout/metric.git

common common-options
  build-depends:       base >= 4.13.0.0 && < 5
                     , relude >= 1 && < 2
  
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  TypeApplications
                       BangPatterns
                       OverloadedStrings

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Metric
                       Metric.IDR
                       Metric.NewtonRaphson
                       Metric.LineSearch
                       Metric.Petsc
                       Metric.Petsc.Types
                       Metric.Petsc.Context
  build-depends:       arrayfire >= 0.6.0.1
                     , halide-haskell >= 0.0.1
                     , inline-c >= 0.9.1
                     , template-haskell
                     , containers
                     , hdf5-hs
                     , unliftio
                     , unliftio-core
                     , resourcet
                     , primitive
                     , hvega
  extra-libraries:     ads_cft_kernels
                     , petsc

executable metric
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       metric
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       metric,
                       arrayfire,
                       hdf5-hs,
                       directory,
                       hspec,
                       QuickCheck,
  build-tool-depends:  hspec-discover:hspec-discover
  other-modules:       MetricSpec
  ghc-options:         -Wno-missing-export-lists
                       -threaded

-- test-suite metric-test
--   import:              common-options
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       metric
--   ghc-options:         -threaded
--                        -rtsopts
--                        -with-rtsopts=-N

-- benchmark metric-benchmark
--   import:              common-options
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      benchmark
--   main-is:             Main.hs
--   build-depends:       gauge
--                      , metric
--   ghc-options:         -threaded
--                        -rtsopts
--                        -with-rtsopts=-N
